[FEATURE]: Implemented swagger for UserHandler
