# APIs/pkg/entity/ErrorResponse.go
@@ -1,0 +1,5 @@
+package entity
+
+type ErrorResponse struct {
+	Message string `json:"message"`
+}
